[project]
name = "codte-backend"
version = "0.1.0"
description = "Django backend project"
authors = [
    {name = "leesanghun"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "django (>=5.2.8,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
